[package]
name = "pilot_test"
version = "0.0.1"
authors = ["Daniel Amesberger <daniel.amesberger@amescon.com>"]
license = "ISC"
edition = "2018"
repository = "https://gitlab.com/pilot-automation/nexus/pilot_test"

[dependencies]
futures = { version = "0.3.5", default-features = false, features = ["async-await"] }
pilot_sys = { git = "https://gitlab.com/pilot-automation/nexus/pilot_sys" }
pilot_macro = { git = "https://gitlab.com/pilot-automation/nexus/pilot_macro" }

